--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# application name
 spring.application.name=Bookstore
+
+# database settings
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_boot_book_store
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.jpa.hibernate.ddl-auto=update
